service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rudra02
spec:
  type: NodePort
  selector:
    app: rudra0006
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31525
