ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
  namespace: default
spec:
  ingressClassName: nginx
  rules:
  - host: rudra-singh.com
    http: 
      paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: rudra02
              port:
                number: 80
